bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:4: error: not found: value strcharAt
    stri=stri+str.charAt(0)+str.charAt(1)+strcharAt(2);
                                          ^